--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.15",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "transformers": "^3.1.0"
   }
 }
