--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,8 @@
             "src": "/(.*)",
             "dest":"/"
         }
-    ]
+    ],
+    "env": {
+        "DATABASE_URL": "./config.js"
+      }
 }
