--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,6 @@
         }
     ],
     "env": {
-        "DATABASE_URL": "./config.js"
+        "DATABASE_URL": "./config/production.json"
       }
 }
