--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,6 @@
         }
     ],
     "env": {
-        "DATABASE_URL": "./config"
+        "DATABASE_URL": "${JSON.stringify(require('./config/production.json').db)}"
       }
 }
