--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,24 @@
 {
-    "version":2,
-    "builds":[
-
-        {
-            "src":"./index.js",
-            "use":"@vercel/node"
-        }
+    "version": 2,
+    "builds": [
+      {
+        "src": "./index.js",
+        "use": "@vercel/node"
+      }
     ],
-    "routes":[
-        {
-            "src": "/(.*)",
-            "dest":"/"
-        }
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/"
+      }
     ],
     "env": {
-        "NODE_ENV": "production",
-        "DATABASE_URL": "./config"
-      } 
-}
+      "NODE_ENV": "production",
+      "DATABASE_URL": "./config"
+    },
+    "minify": {
+      "enabled": true,
+      "cache": true
+    }
+  }
+  
