--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.9.15",
     "morgan": "~1.9.1",
+    "socket.io": "^4.6.1",
     "transformers": "^3.1.0",
     "uglify-js": "^3.17.4"
   }
