--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "socket.io": "^4.6.1",
     "transformers": "^3.1.0",
     "uglify-js": "^3.17.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
