--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.9.15",
     "morgan": "~1.9.1",
     "socket.io": "^4.6.1",
+    "stripe": "^12.7.0",
     "transformers": "^3.1.0",
     "uglify-js": "^3.17.4"
   },
